notgen-3 Add organization. complete